Added css transform to images

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       width: 75%;
       display: block;
       margin: 10px auto;
+      transition: transform 1000ms ease-in-out;
+    }
+
+    img:hover {
+      transform: scale(1.5);
     }
     .white-theme {
       background: #ffcab0;
